--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
         </p>
         <p dir="auto"><code>https://telegram-feiyangdigital.v1.mk/bestv.m3u</code>&nbsp;&nbsp;&nbsp;&nbsp;BESTV源
         </p>
-        <p dir="auto"><code>https://telegram-feiyangdigital.v1.mk/sxg.m3u</code>&nbsp;&nbsp;&nbsp;&nbsp;SXG-IPV6源
+        <p dir="auto"><code>https://telegram-feiyangdigital.v1.mk/sxg.m3u</code>&nbsp;&nbsp;&nbsp;&nbsp;SXG源
         </p>
         <p dir="auto"><code>https://ghproxy.com/https://raw.githubusercontent.com/youshandefeiyang/IPTV/main/main/aishang.m3u</code>&nbsp;&nbsp;&nbsp;&nbsp;爱尚源
         </p>
         <p dir="auto"><code>https://ghproxy.com/https://raw.githubusercontent.com/youshandefeiyang/IPTV/main/main/cqyx.m3u</code>&nbsp;&nbsp;&nbsp;&nbsp;CQYX源
+        </p>
+        <p dir="auto"><code>https://ghproxy.com/https://raw.githubusercontent.com/youshandefeiyang/IPTV/main/main/itouch.m3u</code>&nbsp;&nbsp;&nbsp;&nbsp;TOUCHTV源
         </p>
         <p dir="auto"><code>https://telegram-feiyangdigital.v1.mk</code>&nbsp;&nbsp;&nbsp;&nbsp;肥羊精选
         </p>
