--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </p>
         <p dir="auto"><code>https://telegram-feiyangdigital.v1.mk/ghyx.m3u</code>&nbsp;&nbsp;&nbsp;&nbsp;GHYX源
         </p>
-        <p dir="auto"><code>https://telegram-feiyangdigital.v1.mk/sxg.m3u</code>&nbsp;&nbsp;&nbsp;&nbsp;SXG源
+        <p dir="auto"><code>https://telegram-feiyangdigital.v1.mk/sxg.m3u</code>&nbsp;&nbsp;&nbsp;&nbsp;SXG-IPV6源
         </p>
         <p dir="auto"><code>https://ghproxy.com/https://raw.githubusercontent.com/youshandefeiyang/IPTV/main/main/aishang.m3u</code>&nbsp;&nbsp;&nbsp;&nbsp;爱尚源
         </p>
