--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
             </svg>
         </a>APTV
         </h4>
+        <p dir="auto"><code>https://ghproxy.com/https://raw.githubusercontent.com/Kimentanm/aptv/master/m3u/yqk.m3u</code>&nbsp;&nbsp;&nbsp;&nbsp;APTV 
+            虎牙一起看</p>
         <p dir="auto">
             <code>https://ghproxy.com/https://raw.githubusercontent.com/Kimentanm/aptv/master/m3u/iptv.m3u</code>&nbsp;&nbsp;&nbsp;&nbsp;APTV
             IPv6</p>
