--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </p>
         <p dir="auto"><code>https://telegram-feiyangdigital.v1.mk/bestv.m3u</code>&nbsp;&nbsp;&nbsp;&nbsp;BESTV源
         </p>
-        <p dir="auto"><code>https://telegram-feiyangdigital.v1.mk/ghyx.m3u</code>&nbsp;&nbsp;&nbsp;&nbsp;GHYX源
+        <p dir="auto"><code>https://telegram-feiyangdigital.v1.mk/ghyx.m3u</code>&nbsp;&nbsp;&nbsp;&nbsp;GHYX源【待修复】
         </p>
         <p dir="auto"><code>https://telegram-feiyangdigital.v1.mk/fjgd.m3u</code>&nbsp;&nbsp;&nbsp;&nbsp;FJGD源
         </p>
