--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </p>
         <p dir="auto"><code>https://ghproxy.com/https://raw.githubusercontent.com/youshandefeiyang/IPTV/main/main/aishang.m3u</code>&nbsp;&nbsp;&nbsp;&nbsp;爱尚源
         </p>
-        <p dir="auto"><code>https://ghproxy.com/https://raw.githubusercontent.com/youshandefeiyang/IPTV/main/main/cqyx.m3u</code>&nbsp;&nbsp;&nbsp;&nbsp;CQYX源
-        </p>
+<!--         <p dir="auto"><code>https://ghproxy.com/https://raw.githubusercontent.com/youshandefeiyang/IPTV/main/main/cqyx.m3u</code>&nbsp;&nbsp;&nbsp;&nbsp;CQYX源
+        </p> -->
         <p dir="auto"><code>https://telegram-feiyangdigital.v1.mk</code>&nbsp;&nbsp;&nbsp;&nbsp;肥羊精选
         </p>
         <p dir="auto"><code>敬请期待</code>&nbsp;&nbsp;&nbsp;&nbsp;请期待
